# wgpuproj1

./: .gitignore  Cargo.toml  buildAll.bat  buildAll.sh  index.html
src/: app.rs  camera.rs  lib.rs  main.rs  model.rs  shader.wgsl  state.rs  texture.rs  vert.rs
src/shaders/: simple.wgsl  simple_texture.wgsl
