[package]
name = "wgpuproj1"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "wgpuapp"
path = "src/main.rs"

[dependencies]
env_logger = "0.11.8"
log = "0.4"
wgpu = "24.0"
winit = "0.30"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
image = { version = "0.24", default-features = false, features = ["png"] } # only really for png decoding, maybe gif later
obj = "0.10.2"

# WASM specific stuff
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "24.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Size optimizations for release builds
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "symbols"
debug = false
